integrated firebase and html

--- a/src/dashboard/dashboard.html
+++ b/src/dashboard/dashboard.html
@@ -40,6 +40,14 @@
           <img src="soda.png"/>
         </div>
       </div>
+
+      <div class="box orange">
+        <h1>Juice</h1>
+        <label id="juice-count">1</label>
+        <div class="circle ">
+          <img src="juice.png"/>
+        </div>
+      </div>
     </div>
 
     <div class="row2-container">
