--- a/src/dashboard/dashboard.html
+++ b/src/dashboard/dashboard.html
@@ -26,18 +26,18 @@
       </div>
 
       <div class="box brown" >
-        <h1>Milk</h1>
-        <label id="milk-count">1</label>
+        <h1>Cup Noodle</h1>
+        <label id="cupnoodle-count">1</label>
         <div class="circle">
-          <img src="milk.png"/>
+          <img src="cupnoodle.png"/>
         </div>
       </div>
 
       <div class="box blue">
-        <h1>Soda</h1>
-        <label id="soda-count">1</label>
+        <h1>Milk</h1>
+        <label id="milk-count">1</label>
         <div class="circle ">
-          <img src="soda.png"/>
+          <img src="milk.png"/>
         </div>
       </div>
 
